--- a/Recursion.ipynb
+++ b/Recursion.ipynb
@@ -233,35 +233,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9813911f",
+   "execution_count": 16,
+   "id": "53490203",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'find_fibinocci' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-14-545d69cea047>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#if __name__ == \"__main__\":\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0mobj\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFibonacci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobj\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind_fibinocci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-14-545d69cea047>\u001b[0m in \u001b[0;36mfind_fibinocci\u001b[0;34m(self, n)\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m<\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mn\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mfind_fibinocci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfind_fibinocci\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m#if __name__ == \"__main__\":\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'find_fibinocci' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "class Fibonacci:\n",
-    "    def __init__(self):\n",
-    "        pass\n",
-    "    def find_fibinocci(self,n):\n",
-    "        if n<2:\n",
-    "            return n\n",
-    "        return find_fibinocci(n-2)+find_fibinocci(n-1)\n",
-    "    \n",
-    "#if __name__ == \"__main__\":\n",
-    "obj = Fibonacci()\n",
-    "print(obj.find_fibinocci(6))"
+    "N = 6\n",
+    "def FindFibinocci(n):\n",
+    "    if n<2:\n",
+    "        return n\n",
+    "    return FindFibinocci(n-2)+FindFibinocci(n-1)\n",
+    "\n",
+    "FindFibinocci(N)"
    ]
   },
   {
@@ -357,6 +351,14 @@
     "    PrintSubSeqSum(arr, n, i+1, A, Sum, s)\n",
     "\n",
     "PrintSubSeqSum(arr, n, i, A, Sum, s)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a143a02",
+   "metadata": {},
+   "source": [
+    "## Print any subsequence whose sum is k"
    ]
   },
   {
